--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
 
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏡</text></svg>" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- Preconnect to external domains for performance -->
     <link rel="preconnect" href="https://images.unsplash.com" />
